<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

  <item
      android:id="@+id/nav_search"
      android:icon="@drawable/ic_menu_search"
      android:title="@string/search"/>
  <item
      android:id="@+id/nav_browse"
      android:icon="@drawable/ic_menu_browse"
      android:title="@string/browse"/>
  <item
      android:id="@+id/nav_favorites"
      android:icon="@drawable/ic_menu_favorites"
      android:title="@string/favorites"/>

  <item
      android:id="@+id/nav_about"
      android:icon="@drawable/ic_menu_about"
      android:title="@string/about"/>

  <item android:title="@string/jlpt">
    <menu>
      <item
          android:id="@+id/nav_jlptn1"
          android:icon="@drawable/ic_menu_jlpt"
          android:title="@string/jlpt_n1"/>

      <item
          android:id="@+id/nav_jlptn2"
          android:icon="@drawable/ic_menu_jlpt"
          android:title="@string/jlpt_n2"/>

      <item
          android:id="@+id/nav_jlptn3"
          android:icon="@drawable/ic_menu_jlpt"
          android:title="@string/jlpt_n3"/>

      <item
          android:id="@+id/nav_jlptn4"
          android:icon="@drawable/ic_menu_jlpt"
          android:title="@string/jlpt_n4"/>

      <item
          android:id="@+id/nav_jlptn5"
          android:icon="@drawable/ic_menu_jlpt"
          android:title="@string/jlpt_n5"/>
    </menu>
  </item>

</menu>
