<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/menu_search"
      android:title="@string/action_search"
      android:icon="@drawable/ic_search_white"
      app:showAsAction="ifRoom|collapseActionView"
      app:actionViewClass="androidx.appcompat.widget.SearchView"/>

  <item
      android:id="@+id/menu_export"
      android:title="@string/export"
      android:icon="@drawable/ic_file_download"
      app:showAsAction="ifRoom"/>

  <item
      android:id="@+id/menu_remove_all_favorites"
      android:title="@string/remove_all_favorites"
      android:icon="@drawable/ic_clear_all"
      app:showAsAction="ifRoom"/>
</menu>
