<resources>
  <string name="app_name">Jisho Tomo</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_search">Search</string>
  <string name="alt_readings">Alternate Readings</string>
  <string name="alt_kanji">Alternate Kanji</string>
  <string name="see_also_format">%1$s %2$s</string>
  <string name="applies_to_format">%1$s %2$s</string>
  <string name="see_also">See also:</string>
  <string name="applies_to">Applies to:</string>
  <string name="list_of_words_delimiter">,\u0020</string>
  <string name="search_hint">Search the dictionary</string>
  <string name="add_to_favorites">Add Entry to Favorites</string>
  <string name="remove_from_favorites">Remove Entry from Favorites</string>
  <string name="select_something">No entry selected.</string>
  <string name="no_favorites">You have no favorite entries. Tap the star on an entry to favorite it.</string>
  <string name="no_search_results">No results found for \"%s\". Try a different search.</string>
  <string name="nothing_here">Whoops, there is nothing here.</string>
  <string name="copied">Meaning copied to your clipboard.</string>
  <string name="copy_label">Meaning</string>

  <!-- Menu -->
  <string name="search">Search</string>
  <string name="search_results">Search Results</string>
  <string name="browse">Browse</string>
  <string name="favorites">Favorites</string>
  <string name="jlpt">JLPT Vocabulary Lists</string>
  <string name="jlpt_n1">N1</string>
  <string name="jlpt_n2">N2</string>
  <string name="jlpt_n3">N3</string>
  <string name="jlpt_n4">N4</string>
  <string name="jlpt_n5">N5</string>
  <string name="export">Export to TSV</string>
  <string name="remove_all_favorites">Remove All Favorites</string>
  <string name="about">About</string>

  <!-- Widget -->
  <string name="word_of_the_day">Word of the Day</string>
  <string name="configure">Select a JLPT Level</string>
  <string name="widget_explanation">The widget will display a random word from your selected JLPT level every 24 hours.</string>
  <string name="add_widget">Add widget</string>

  <!-- CSV export -->
  <string name="export_instructions">You can export your favorites or the JLPT lists to a TSV (tab-separated values) for
    importing into other programs, like Anki SRS. The format is "expression meaning reading" separated by tabs. Please
    make sure to allow HTML when you import.</string>
  <string name="export_yes">Proceed</string>
  <string name="cancel">Cancel</string>
  <string name="permission_denied">External Storage Write Permission Denied: You will not be able to use the Export feature.</string>
  <string name="no_external_storage">No external storage detected. You will not be able to use the Export feature.</string>
  <string name="csv_successful">TSV export successful!</string>
  <string name="csv_failed">TSV export failed.</string>
  <string name="share_csv">Share Exported TSV</string>

  <string name="explain_unfavorite_all">This will remove all of your favorites. This cannot be undone. Continue?</string>
  <string name="okay">OK</string>

  <string name="about_app">Jisho Tomo was created as part of the Android Developer Nanodegree program by Udacity and Google. The
    code is open source and available on <a href="https://github.com/sienatime/jishotomo">GitHub</a>.\n\nThis
    app uses the <a href="http://www.edrdg.org/jmdict/j_jmdict.html">JMdict dictionary files</a>.
    These files are the property of the <a href="http://www.edrdg.org/">Electronic Dictionary Research and Development Group</a>,
    and are used in conformance with the Group\'s <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.\n\nJLPT
    data is from <a href="http://www.tanos.co.uk/jlpt/">Jonathan Waller\'s site</a>, which is provided under a Creative Commons license.
  </string>

  <!-- parts of speech -->
  <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
  <string name="adj_f">Adjective</string>
  <string name="adj_i">Adjective</string>
  <string name="adj_ix">Adjective</string>
  <string name="adj_ku">Adjective</string>
  <string name="adj_na">Adjective</string>
  <string name="adj_nari">Adjective</string>
  <string name="adj_no">Adjective</string>
  <string name="adj_pn">Pre-Noun Adjectival</string>
  <string name="adj_shiku">Adjective</string>
  <string name="adj_t">Adjective</string>
  <string name="adv_to">Adverb</string>
  <string name="adv">Adverb</string>
  <string name="aux_adj">Auxiliary Adjective</string>
  <string name="aux_v">Auxiliary Verb</string>
  <string name="aux">Auxiliary</string>
  <string name="conj">Conjunction</string>
  <string name="cop_da">Copula</string>
  <string name="ctr">Counter</string>
  <string name="exp">Expression</string>
  <string name="intj">Interjection</string>
  <string name="n_adv">Adverbial Noun</string>
  <string name="n_pr">Proper Noun</string>
  <string name="n_pref">Noun (Prefix)</string>
  <string name="n_suf">Noun (Suffix)</string>
  <string name="n_t">Noun (Temporal)</string>
  <string name="n">Noun</string>
  <string name="num">Numeric</string>
  <string name="pn">Pronoun</string>
  <string name="pref">Prefix</string>
  <string name="prt">Particle</string>
  <string name="suf">Suffix</string>
  <string name="unc">Unclassified</string>
  <string name="v1_s">Verb</string>
  <string name="v1">Verb</string>
  <string name="v2a_s">Verb</string>
  <string name="v2b_k">Verb</string>
  <string name="v2d_s">Verb</string>
  <string name="v2g_k">Verb</string>
  <string name="v2g_s">Verb</string>
  <string name="v2h_k">Verb</string>
  <string name="v2h_s">Verb</string>
  <string name="v2k_k">Verb</string>
  <string name="v2k_s">Verb</string>
  <string name="v2m_s">Verb</string>
  <string name="v2n_s">Verb</string>
  <string name="v2r_k">Verb</string>
  <string name="v2r_s">Verb</string>
  <string name="v2s_s">Verb</string>
  <string name="v2t_k">Verb</string>
  <string name="v2t_s">Verb</string>
  <string name="v2w_s">Verb</string>
  <string name="v2y_k">Verb</string>
  <string name="v2y_s">Verb</string>
  <string name="v2z_s">Verb</string>
  <string name="v4b">Verb</string>
  <string name="v4g">Verb</string>
  <string name="v4h">Verb</string>
  <string name="v4k">Verb</string>
  <string name="v4m">Verb</string>
  <string name="v4r">Verb</string>
  <string name="v4s">Verb</string>
  <string name="v4t">Verb</string>
  <string name="v5aru">Verb</string>
  <string name="v5b">Verb</string>
  <string name="v5g">Verb</string>
  <string name="v5k_s">Verb</string>
  <string name="v5k">Verb</string>
  <string name="v5m">Verb</string>
  <string name="v5n">Verb</string>
  <string name="v5r_i">Verb</string>
  <string name="v5r">Verb</string>
  <string name="v5s">Verb</string>
  <string name="v5t">Verb</string>
  <string name="v5u_s">Verb</string>
  <string name="v5u">Verb</string>
  <string name="vi">Verb (Intransitive)</string>
  <string name="vk">Verb</string>
  <string name="vn">Verb</string>
  <string name="vr">Verb</string>
  <string name="vs_c">Verb</string>
  <string name="vs_i">Verb</string>
  <string name="vs_s">Verb</string>
  <string name="vs">Verb</string>
  <string name="vt">Verb (Transitive)</string>
  <string name="vz">Verb</string>
</resources>
