...
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingBottom="8dp"
        style="@style/small_caps"
        visibleOrGone="@{presenter.partsOfSpeechIsVisible()}"
        android:text="@{presenter.partsOfSpeech(context)}"
        tools:text="NOUN, NA-ADJ"
        />
    <View
        android:id="@+id/sense_divider"
        style="@style/divider_full_width" />

    <TextView
...
        app:fontFamily="sans-serif"
        visibleOrGone="@{presenter.crossReferencesIsVisible()}"
        android:text="@string/see_also"
        />

    <LinearLayout
        android:id="@+id/li_cross_reference_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        crossReferenceLinks="@{presenter.crossReferenceLinks()}"
        />

...
