<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:clipToPadding="false"
      >

    <androidx.compose.ui.platform.ComposeView
        android:id="@+id/entry_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="72dp"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

    </androidx.compose.ui.platform.ComposeView>

  </androidx.core.widget.NestedScrollView>

  <!-- content description is set programmatically -->
  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|end"
      android:layout_margin="@dimen/fab_margin"
      app:elevation="@dimen/fab_elevation"
      tools:ignore="ContentDescription"
      />
</FrameLayout>
