...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:visibility="visible"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_results_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:visibility="visible"
            />

        <TextView
            android:id="@+id/no_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textSize="@dimen/text_size_body"
...
